--- a/README.Rmd
+++ b/README.Rmd
@@ -359,72 +359,41 @@ The third example considers the prospective relevant indicators of the farmers o
 It can be advantageous to define distinct uncertainties for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (equation 3 in Husmann et al. (n.d.)) and the actual distances under a certain land-cover composition $R_{iu}$ (equation 5 in Husmann et al. (n.d.), see also equation 9). The broadenes uncertainty space allows for a broader state space of the distances $d_{ij}$, which usually leads to smoother transitions when the uncertainty values are raised. Disadvantage is that the distances cannot be interpreted straightforwardly any more. The different uncertainty spaces considered in the denominator and in the counter of equation 3 (Husmann et al., n.d.) to not normalize the distance to \{0, 1\} any more.
 
 
-```{r, fig.height = 3, fig.width = 4}
+```{r, fig.height = 5, fig.width = 7}
 
-#### uValue == 0 ####
+#### uValue 3 ####
+path <- exampleData("exampleGosling.xlsx")
+dat <- read_excel(path)
 
-# Initializing an optimLanduse-object using initScenario()
-init_u0 <- initScenario(dat,
-                     uValue = 0,
-                     optimisticRule = "expectation", 
-                     # optimistic contribution of each indicator directly defined by their average 
-                     fixDistance = 3) 
-                     # 3 is the default
-init_u0$scenarioSettings
-names(init_u0$scenarioTable)
-init_u0$coefObjective
-colnames(init_u0$coefConstraint)
-head(init_u0$distance)
+applyDf <- data.frame(u = seq(0, 3, .5))
 
-# Solve the initialized optimLanduse object with the solveScenario() function                 
-result_u0 <- solveScenario(x = init_u0)
+applyFun <- function(x) {
+  init <- initScenario(dat, uValue = x, optimisticRule = "expectation", fixDistance = 3)
+  result <- solveScenario(x = init)
+  return(c(result$beta, as.matrix(result$landUse)))
+}
 
-result_u0$status
-result_u0$beta
-result_u0$landUse
+applyDf <- cbind(applyDf,
+                 t(apply(applyDf, 1, applyFun)))
+                 
+names(applyDf) <- c("u", "beta", names(result$landUse))
 
-# Typical result visualization
-result_u0$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1:6) %>% 
-  mutate(uValue = "0",
-         landCoverShare = landCoverShare * 100) %>% 
-  ggplot(aes(y = landCoverShare, x = uValue, fill = landCoverOption)) + 
-  geom_bar(position = "stack", stat = "identity") + 
-  theme_classic() +
-  theme(text = element_text(size = 14)) +
-  scale_fill_startrek() +
-  labs(x = "Optimal farm composition", y = "Allocated share (%)") +
+applyDf[, c(3 : 8)] <- applyDf[, c(3 : 8)] * 100
+
+applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -beta) %>%
+  ggplot(aes(y = `land-cover share`, x = u, fill = `land-cover option`)) + 
+  geom_area(alpha = .8, color = "white") + theme_minimal()+
+  labs(x = "Uncertainty level", y = "Allocated share (%)") + 
+  guides(fill=guide_legend(title="")) + 
   scale_y_continuous(breaks = seq(0, 100, 10), 
-                     limits = c(0, 100)) +
-  theme(axis.text.x=element_blank(),
-        axis.ticks.x=element_blank()) + 
-  guides(fill=guide_legend(title=""))
-
-
-#### uValue == 3 ####
-
-init_u3 <- initScenario(dat,
-                     uValue = 3,
-                     optimisticRule = "expectation", 
-                     fixDistance = 3) 
-
-                
-result_u3 <- solveScenario(x = init_u3)
-
-result_u3$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1:6) %>% 
-  mutate(uValue = "2",
-         landCoverShare = landCoverShare * 100) %>% 
-  ggplot(aes(y = landCoverShare, x = uValue, fill = landCoverOption)) + 
-  geom_bar(position = "stack", stat = "identity") + 
-  theme_classic() +
-  theme(text = element_text(size = 14)) +
+                     limits = c(0, 100.01)) +
+  scale_x_continuous(breaks = seq(0, 3, 0.5),
+                     limits = c(0, 3)) + 
   scale_fill_startrek() +
-  labs(x = "Optimal farm composition", y = "Allocated share (%)") +
-  scale_y_continuous(breaks = seq(0, 100, 10), 
-                     limits = c(0, 100)) +
-  theme(axis.text.x=element_blank(),
-        axis.ticks.x=element_blank()) + 
-  guides(fill=guide_legend(title=""))
+  theme(text = element_text(size = 18),
+        legend.position = "bottom")
 ```
+It can be see that the land-cover allocation transition under raising uncertainty differs of the here presented multi-functional scenario differs slightly from the multi-functional scanrio shown above. The here broadened state space leads an earlier increase of pasture.
 
 
 
