--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 <a href="#3. Input und Output">Detailed description of the functions' in- and outputs</a>
 </li>
 <li>
-<a href="#5. Beispielhafte Anwendung">Use-case</a>
+<a href="#5. Beispielhafte Anwendung">Example application</a>
 </li>
 <li>
 <a href="#6. Erweiterte Anwendung">Sophisticated application</a>
@@ -81,8 +81,8 @@ The resulting *list with results* contains different Information of the optimiza
 
 -   *scenarioSettings*: Data frame with *uValue* and *optimisticRule* used.
 -   *scenarioTable*: Data frame with one row for each combination of worst-case and best-case outcomes of all indicators (thus the number of scenarios $N_S$ in Husmann et al (n.d.)). The columns contain certain relevant calculation steps of the optimization program. *adjSem\** are the uncertainty adjusted indicators ($R_{liu}$ in Husmann et al. (n.d.)). *minAdjSem* are the minimal uncertainty adjusted indicators $min(R_{liu})$ and $max(R_{liu})$ the maximal uncertainty adjusted indicators. diffAdjSem are the range between these uncertainties adjusted indicators $\delta_{\text{min,max}_{iu}}$.
--   *coefObjective*: The optimization program is translated into a linear program with $N_L$ (number of land-cover options) coefficients for the inner solution. The inner solution is solved using *lpSolveAPI*. *coefObjective* is the data frame that contains these coefficients.
--   *coefConstraing*: A data frame with the respective constraints for the inner solution solved by *lpsolveAPI*.
+-   *coefObjective*: The optimization program is translated into a linear program with $N_L$ (number of land-cover options) coefficients for the inner solution. The inner solution is solved using *lpSolveAPI()*. *coefObjective* is the data frame that contains these coefficients.
+-   *coefConstraing*: A data frame with the respective constraints for the inner solution solved by *lpsolveAPI()*.
 -   *distances*: The distance of each scenario to its own theoretically best-achievable contribution (reference). See equation 3 in Husmann et al. (n.d.).
 
 This is followed by a summary of the results of the optimization:
@@ -243,7 +243,7 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
         legend.position = "bottom")
 ```
 
-Solving the porfolio under increasing assumptions for the untertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the standard error of the mean (Gosling et al. use the s.e.m.; any other uncertainty measure is also possible) of the indicator consequences on the land-cover options. Here, the composition of land-cover alternatives is quite stable. Only the small proportion of crops (circa 10 %) is interchanged with small proportions of pasture and plantation. Forest and silvopasture are practically not affected by the uncertainty level. The plot corresponds to figure 3 in Gosling et al. (2020).
+Solving the portfolio under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the standard error of the mean (Gosling et al. use the s.e.m.; any other uncertainty measure is also possible) of the indicator consequences on the land-cover options. Here, the composition of land-cover alternatives is quite stable. Only the small proportion of crops (circa 10 %) is interchanged with small proportions of pasture and plantation. Forest and silvopasture are practically not affected by the uncertainty level. Alley cropping does not appear in this portfolio at any uncertainty level. This is due to the fact that it is not defined as the best land-cover type in any indicator and is also the land-cover type that has the highest management complexity. The plot corresponds to figure 3 in Gosling et al. (2020).
 
 ### Leave-Indicators-Out-Analysis to Investigate the Indicators' Sensitivity
 
